--- a/app/views/poormans_trends/home/_dashboard.html.slim
+++ b/app/views/poormans_trends/home/_dashboard.html.slim
@@ -8,12 +8,14 @@
       - older_count  = klass.where("#{column} >= ? AND #{column} < ?", full_time, half_time).count
       h4 style="text-align:center"= pluralize(klass.count, "Total #{klass.table_name.singularize.titleize}")
       div.trend class=(recent_count > older_count ? 'up-trend' : 'down-trend')
-        .pct.pull-right
+        .pull-right.text-right
+          h1
+            ' #{number_to_human(recent_count, units: :human_unit) rescue nil}
+          | #{column.sub(/_at$/, '').downcase} in the last #{duration.inspect}
+        .pct.pull-left
           h1= "#{'%0.0f' % ((recent_count - older_count) / older_count.to_f * 100)}%"
-          .text-center  from #{older_count}
-        .pct.pull-right
+          | from #{older_count}
+        .pct.pull-left
           h1.trendarrow
-        h1
-          ' #{number_to_human(recent_count, units: :human_unit) rescue nil}
-        | #{column.sub(/_at$/, '').downcase} in the last #{duration.inspect}
+
       div.chart style="opacity: 0.5;" data-chart=[{name: "Count", color: '#a3a3a8', data: data_for(klass, column, full_time)}, {name: "Count", color: '#6499cf', data: data_for(klass, column, half_time)}].to_json
